--- a/layouts/partials/li_compact2.html
+++ b/layouts/partials/li_compact2.html
@@ -40,7 +40,7 @@
 
     {{ with $summary }}
     <div class="article-style" itemprop="articleBody">
-      {{ . }}
+      {{ . | truncate 135 }}
     </div>
     {{ end }}
 
